add html tutorials

--- a/src/app/htmltutorial/htmltutorial.component.html
+++ b/src/app/htmltutorial/htmltutorial.component.html
@@ -1,3 +1,95 @@
-<p>
-  htmltutorial works!
+<h4>Here is my short text</h4>
+<hr />
+<div style="color: brown;background-color: cornflowerblue;">
+  Hereis my short <b><i>paragraph</i></b> <br />
+  <h2>Here is my short text</h2>
+  <h2>Here is my short text</h2>
+  <br />
+  <h2>
+    Formula of, <b>a<sup>2</sup>+b<sup>2</sup></b> =
+    <b>a<sup>2</sup>+2ab+b<sup>2</sup></b> Symbol of water is
+    <b>H<sub>2</sub>O</b>
+  </h2>
+</div>
+<!--
+      <h2>Comments are <i>~~INVISSIBLE~~</i></h2>
+      -->
+<!--
+        Dont display it
+      -->
+<hr />
+<h2><p style="color: blue;">~~STYLE & COLOR~~</p></h2>
+<hr />
+<p style="color: brown;background-color: cornflowerblue;">
+  Here I can style my html & make it loop pretty. Here I can color my text.
 </p>
+<hr />
+<a href="https://www.google.com" target="_blank">Google's home page</a> <br />
+<a href="page2.html" target="_blank">https://www.facebook.com</a> <br />
+<a href="https://www.facebook.com" target="_blank">facebook's home page</a>
+<a href="dir1/page3.html" target="_blank">youtube</a>
+<a href="dir1/Baby_Krishna.jpg" target="_blank">God</a>
+<!-- <img
+  width="500"
+  src="https://images.pexels.com/photos/774554/pexels-photo-774554.jpeg?cs=srgb&dl=adorable-baby-big-eyes-774554.jpg"
+  alt="image not found"
+/> -->
+<li>
+  <a href="#">Apples</a>
+  <ol>
+    <li>item1</li>
+    <li>item2</li>
+    <li>item3</li>
+  </ol>
+</li>
+<li><a href="#">Oranges</a></li>
+<dl>
+  <dt>Apples</dt>
+  <dd>-Apples are red</dd>
+  <dt>Oranges</dt>
+  <dd>-They are red</dd>
+</dl>
+<table>
+  <thead>
+    <caption>
+      <h4>List of the numbers</h4>
+    </caption>
+    <tr>
+      <th>No 1</th>
+      <th>No 2</th>
+      <th>No 3</th>
+      <th>No 4</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>one</td>
+      <td>two</td>
+      <td>three</td>
+      <td>four</td>
+    </tr>
+  </tbody>
+</table>
+<a href="#">link1</a> <a href="#">link2</a>
+<hr />
+<p>Paragraph 1</p>
+<p>Paragraph 2</p>
+<span>Span 1</span> <span>Span 2</span>
+<hr />
+<div>div 1</div>
+<div>div 2</div>
+<input type="date"/> <br />
+<input type="text" placeholder="Enter your User name"/> <br />
+<input type="password" placeholder="Enter your password"/> <br />
+<textarea rows="10" cols="10">
+        Enter a paragraph
+</textarea>
+<br />
+<input type="email" placeholder="Enter your E-mail" /> <br />
+<input type="range" /> <br />
+<input type="file" /> <br />
+<input type="range" /> <br />
+<input type="checkbox" /> <input type="checkbox" /> <br />
+<input name="btn" type="radio" /> <input name="btn" type="radio" /> <br />
+<input type="submit" />
+<!-- <iframe src="http://giraffacademy.com/" width="1000" height="800"> </iframe> -->
