--- a/src/app/scsstutorial/scsstutorial.component.html
+++ b/src/app/scsstutorial/scsstutorial.component.html
@@ -1,3 +1,87 @@
-<p>
-  scsstutorial works!
-</p>
+<head>
+  Scsstutorial works!
+  <br />
+  My new project!
+</head>
+<hr />
+<nav>
+  <ul>
+    <li><a href="#">Home</a></li>
+    <li><a href="#">Tutorial</a></li>
+    <li><a href="#">Project</a></li>
+  </ul>
+</nav>
+<body>
+  <img
+    class="profile-img"
+    src="https://cdn3.euraxess.org/sites/default/files/jobs_search.jpg"
+  />
+  <p>Lucky</p>
+  <div class="little-panel">little panel</div>
+  <div class="big-panel">big panel</div>
+
+  <p><a href="#" target="_blank" class="button">Button</a></p>
+  <p><a href="#" target="_blank" class="button">jumbo-Button</a></p>
+  <p><a href="#" target="_blank" class="button">light-Button</a></p>
+</body>
+<br />
+<br />
+<body>
+  <div class="container">
+    <ul>
+      <li>
+        <span></span>
+        <div class="titel">Codify</div>
+        <div class="info">Creating awesome css tutorials</div>
+        <div class="type">Presentation</div>
+        <div class="time"> <span>9:00</span> <span>10:00</span> </div>
+      </li>
+      <li>
+        <span></span>
+        <div class="titel">Codify</div>
+        <div class="info">Creating awesome css tutorials</div>
+        <div class="type">Presentation</div>
+        <div class="time"> <span>13:00</span> <span>14:00</span> </div>
+      </li>
+      <li>
+        <span></span>
+        <div class="titel">Codify</div>
+        <div class="info">Creating awesome css tutorials</div>
+        <div class="type">Presentation</div>
+        <div class="time"> <span>15:00</span> <span>19:00</span> </div>
+      </li>
+    </ul>
+  </div>
+</body>
+<body>
+  <div class="card">
+<div class="card__img:container">
+ <img src="//unsplash.it/300/500" alt="">
+</div>
+<div class="card__content">
+    <h2 class="card__title">A cool product</h2>
+    <p class="card__subtitle">THAT YOU SHOULD BUY</p>
+    <p class="card__description">The painting dominates the walls, every colour is bold and painted with such precise lines that it almost looks like a mosaic</p>
+    <p class="card__price">$450.99</p>
+    <a href="#" class="card__button">Buy now</a>
+    </div>
+  </div>
+</body>
+<body>
+  <div class="wrapper">
+
+    <header>
+      <h1>Cute Rabbit</h1>
+    </header>
+
+    <main>
+      <section>
+        <h2>Don't Mess with a Rabbit</h2>
+        <article>
+
+        </article>
+      </section>
+    </main>
+
+  </div>
+</body>
