basic tutorial setup

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,4 +1,7 @@
 <nav class="nav">
   <a routerLink="/tuthtml" routerLinkActive="active-link">HTML Tutorial</a>
   <a routerLink="/tutscss" routerLinkActive="active-link">Scss Tutorial</a>
+  <a routerLink="/tutgrid1" routerLinkActive="active-link">Grid1 Tutorial</a>
+  <a routerLink="/tutgrid2" routerLinkActive="active-link">Grid2 Tutorial</a>
+  <a routerLink="/tutgrid3" routerLinkActive="active-link">Grid3 Tutorial</a>
 </nav>
