--- a/src/app/scsstutorial/scsstutorial.component.scss
+++ b/src/app/scsstutorial/scsstutorial.component.scss
@@ -102,9 +102,6 @@ $buttonPadding: 5px;
     &::before {
       content: '';
       position: absolute;
-      top: 0;
-      left: 0;
-      width: 0;
       height: 100%;
       border: 1px #df7b7b;
     }
@@ -113,56 +110,30 @@ $buttonPadding: 5px;
       margin: 30px 60px;
       position: relative;
 
-    > span {
+      > span {
         content: '';
         position: absolute;
-        top: 0;
-        left: -60px;
         width: 0;
         height: 100%;
         border: 1px #df7b7b;
 
-        &::before,
-        &::after {
+        &::after,
+        &::before {
           content: '';
           width: 10px;
           height: 10px;
           border: 2px solid #aaa;
           position: absolute;
           border-radius: 50%;
-          left: -7px;
           background: #fff;
         }
 
-        &::before {
-          top: -10px;
-        }
-
-        &::after {
-          top: 100%;
-        }
-      }
-
-      .time span{
-        position: absolute;
-        text-align: right;
-        font-size: 12px;
-        width: 30px;
-        left: -105px;
-        :first-child {
-          top: -12px;
-        }
-        :last-child {
-          left: -100px;
-          top: 100%;
-        }
       }
     }
 
   }
 }
-
-@import url('https://fonts.googleapis.com/css?family=Merriweather Sans');
+@import url( 'https://fonts.googleapis.com/css?family=Merriweather Sans');
 
 * {
   padding: 0;
@@ -174,6 +145,7 @@ body {
   font-family: 'Merriweather Sans', sans-serif;
   padding: 50px;
 }
+
 .card {
   width: 600px;
   box-shadow: 0 0 15px rgba(0,0,0,.20);
@@ -183,6 +155,7 @@ body {
 .card__content {
   padding: 100px 40px;
 }
+
 body {
   font-size: 65.5%;
   margin: 0;
@@ -190,12 +163,6 @@ body {
   background-image: url("../../assets/paint.jpg");
   background-size: cover;
   background-attachment: fixed;
-  background-image: -webkit-linear-gradient(top, #000, gray);
-  background-image: -moz-linear-gradient(top, #000, gray);
-  background-image: -ms-linear-gradient(top, #000, gray);
-  background-image: -o-linear-gradient(top, #000, gray);
-  background-image: linear-gradient(top, #000, gray);
-
 }
 
 .wrapper {
