created more router links

--- a/src/app/grid1/grid1.component.html
+++ b/src/app/grid1/grid1.component.html
@@ -1,3 +1,116 @@
-<p>
-  grid1 works!
-</p>
+ <title>GridBiz 1</title>
+
+<body>
+  <div class="wrapper">
+    <!-- Navigation-->
+    <nav class="main-nav">
+      <ul>
+        <li>
+          <a href="#">Home</a>
+        </li>
+        <li>
+          <a href="#">About</a>
+        </li>
+        <li>
+          <a href="#">Services</a>
+        </li>
+        <li>
+            <a href="#">Contact</a>
+          </li>
+      </ul>
+    </nav>
+
+    <!--Top Container-->
+    <section class="top-container">
+      <header class="showcase">
+        <h1>Web Presence</h1>
+        <p>Power doesn’t come from content, power comes from the content that moves.</p>
+        <a href="#" class="btn">Read More</a>
+      </header>
+      <div class="top-box top-box-a">
+        <h4>Membership</h4>
+        <p class="price">$199/mo</p>
+        <a href="#" class="btn">Buy Now</a>
+      </div>
+      <div class="top-box top-box-b">
+          <h4>Pro Membership</h4>
+          <p class="price">$299/mo</p>
+          <a href="#" class="btn">Buy Now</a>
+        </div>
+    </section>
+
+    <!-- Boxes Section -->
+    <section class="Boxes">
+      <div class="box">
+        <i class="fas fa-chart-pie fa-8x"></i>
+        <h3>Analytics</h3>
+        <p>Power doesn’t come from content, power comes from the content that moves.</p>
+      </div>
+      <div class="box">
+          <i class="fas fa-globe fa-8x"></i>
+          <h3>Marketing</h3>
+          <p>Power doesn’t come from content, power comes from the content that moves.</p>
+        </div>
+        <div class="box">
+            <i class="fas fa-cogs fa-8x"></i>
+            <h3>Development</h3>
+            <p>Power doesn’t come from content, power comes from the content that moves.</p>
+          </div>
+          <div class="box">
+              <i class="fas fa-users fa-8x"></i>
+              <h3>Support</h3>
+              <p>Power doesn’t come from content, power comes from the content that moves.</p>
+            </div>
+    </section>
+
+    <!-- Info Section -->
+    <section class="info">
+      <img src="https://images.pexels.com/photos/6598/coffee-desk-laptop-notebook.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="">
+      <div>
+        <h2>Your Business On The Web</h2>
+        <p>Great things in business are never done by one person. They're done by a team of people.</p>
+        <a href="#" class="btn">Learn More</a>
+      </div>
+    </section>
+
+    <!-- Portfolio -->
+    <section class="portfolio">
+      <img
+      src="https://source.unsplash.com/random/200x200" alt="">
+      <img
+      src="https://source.unsplash.com/random/201x200" alt="">
+      <img
+      src="https://source.unsplash.com/random/202x200" alt="">
+      <img
+      src="https://source.unsplash.com/random/203x200" alt="">
+      <img
+      src="https://source.unsplash.com/random/204x200" alt="">
+      <img
+      src="https://source.unsplash.com/random/205x200" alt="">
+      <img
+      src="https://source.unsplash.com/random/206x200" alt="">
+      <img
+      src="https://source.unsplash.com/random/207x200" alt="">
+      <img
+      src="https://source.unsplash.com/random/208x200" alt="">
+      <img
+      src="https://source.unsplash.com/random/209x200" alt="">
+      <img
+      src="https://source.unsplash.com/random/210x200" alt="">
+      <img
+      src="https://source.unsplash.com/random/211x200" alt="">
+      <img
+      src="https://source.unsplash.com/random/212x200" alt="">
+      <img
+      src="https://source.unsplash.com/random/213x200" alt="">
+    </section>
+
+    <!-- Footer -->
+    <footer>
+      <p>GridBiz &copy; 2019</p>
+    </footer>
+
+  </div>
+  <!-- Wrapper Ends -->
+
+</body>
