--- a/src/app/grid3/grid3.component.html
+++ b/src/app/grid3/grid3.component.html
@@ -1,3 +1,38 @@
-<p>
-  grid3 works!
-</p>
+
+  <body>
+  <div class="header">
+    <h1>London</h1>
+  </div>
+
+  <div class="row">
+    <div class="col-3 col-s-3 menu">
+      <ul>
+        <li>The Flight</li>
+        <li>The City</li>
+        <li>The Island</li>
+        <li>The Food</li>
+      </ul>
+    </div>
+
+    <div class="col-6 col-s-9">
+      <h1>The City</h1>
+      <p>London is often considered as the world's leading global city and has been termed as the world's most powerful, most desirable, most influential, most visited, most expensive, innovative, sustainable, most investment friendly, most popular for work, and the most vegetarian friendly city in the world. London exerts a considerable impact upon the arts, commerce, education, entertainment, fashion, finance, healthcare, media, professional services, research and development, tourism and transportation.</p>
+    </div>
+
+    <div class="col-3 col-s-12">
+      <div class="aside">
+        <h2>What?</h2>
+        <p>London, city, capital of the United Kingdom.</p>
+        <h2>Where?</h2>
+        <p>London is situated in southeastern England, lying astride the River Thames some 50 miles (80 km) upstream from its estuary on the North Sea.</p>
+        <h2>How?</h2>
+        <p>You can reach London airport from all over Europe.</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="footer">
+    <p>Resize the browser window to see how the content respond to the resizing.</p>
+  </div>
+
+  </body>
