--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -4,4 +4,17 @@
   <a routerLink="/tutgrid1" routerLinkActive="active-link">Grid1 Tutorial</a>
   <a routerLink="/tutgrid2" routerLinkActive="active-link">Grid2 Tutorial</a>
   <a routerLink="/tutgrid3" routerLinkActive="active-link">Grid3 Tutorial</a>
+  <a routerLink="/tutgrid4" routerLinkActive="active-link">Grid4 Tutorial</a>
+  <a routerLink="/tutgrid5" routerLinkActive="active-link">Grid5 Tutorial</a>
+  <a routerLink="/tutgrid6" routerLinkActive="active-link">Grid6 Tutorial</a>
+  <a routerLink="/tutgrid7" routerLinkActive="active-link">Grid7 Tutorial</a>
+  <a routerLink="/tutgrid8" routerLinkActive="active-link">Grid8 Tutorial</a>
+  <a routerLink="/tut1" routerLinkActive="active-link">Tutorial 1</a>
+  <a routerLink="/tut2" routerLinkActive="active-link">Tutorial 2</a>
+  <a routerLink="/tut3" routerLinkActive="active-link">Tutorial 3</a>
+  <a routerLink="/tut4" routerLinkActive="active-link">Tutorial 4</a>
+  <a routerLink="/tut5" routerLinkActive="active-link">Tutorial 5</a>
+  <a routerLink="/tut6" routerLinkActive="active-link">Tutorial 6</a>
+  <a routerLink="/tut7" routerLinkActive="active-link">Tutorial 7</a>
+  <a routerLink="/tut8" routerLinkActive="active-link">Tutorial 8</a>
 </nav>
