--- a/src/styles/_color.scss
+++ b/src/styles/_color.scss
@@ -45,7 +45,7 @@ $sv-light-blue-d3: #0277bd;
 $sv-light-blue-d4: #01579b;
 $sv-light-blue-a1: #80d8ff;
 $sv-light-blue-a2: #40c4ff;
-$sv-light-blue-a3: #00b0ff;
+$sv-light-blue-a3: #16d5db;
 $sv-light-blue-a4: #0091ea;
 
 // blue-gray
@@ -91,3 +91,10 @@ $sv-deep-orange-a1: #ff9e80;
 $sv-deep-orange-a2: #ff6e40;
 $sv-deep-orange-a3: #ff3d00;
 $sv-deep-orange-a4: #dd2c00;
+
+$white: #fff;
+$light-gray: #AAA;
+$gray: #37474f;
+$accent: #139fac;
+$dark-blue: rgb(25, 25, 112);
+$dark-gray:  #263238;
