--- a/src/app/scsstutorial/scsstutorial.component.scss
+++ b/src/app/scsstutorial/scsstutorial.component.scss
@@ -17,20 +17,22 @@ $text-color: #ffffff;
 nav {
   ul {
     background-color: $bg-color;
-    margin: 1;
-    padding: 5;
+    margin: 10px;
+    padding: 5px;
     list-style: none;
+    text-align: center;
   }
 
-  li {
-    display: inline-block;
+ ul li {
+    display: inline;
   }
 
-  a {
-    color: $text-color;
-    display: inline-block;
-    padding: 10px 15px;
+  ul li a {
+    color: #d9e4ee;
+    display: inline;
+    padding: 2em 1em;
     text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
   }
 
   a:hover {
